--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,15 @@ body{
   box-sizing: border-box;
 }
 
+hr {
+  display: block;
+  width: 100%;
+  background-color: #e5e5e5;
+  height: 1px;
+  border: 0;
+  margin: 40px 0;
+}
+
 .container{
   max-width: 100%;
   width: 1200px;
@@ -212,10 +221,16 @@ body{
   padding: 80px 0;
 }
 
+.section--devices {
+  background: url("../images/devices_bg.jpg") center no-repeat;
+  background-size: cover;
+  padding-bottom: 0;
+}
+
 .section__header {
   max-width: 100%;
   width: 950px;
-  margin: 0 auto 40px;
+  margin: 0 auto 50px;
   text-align: center;
 }
 
@@ -244,7 +259,7 @@ body{
 }
 
 .section__text {
-  font-family: font-family: 'Roboto', sans-serif;
+  font-family:'Roboto', sans-serif;
   font-size: 15px;
   color: #999;
 
@@ -343,21 +358,58 @@ body{
 }
 
 
+/*Services*/
+
+.services {
+  display: flex;
+}
+
+.services__item {
+  flex: 1 1 0;
+  padding-left: 85px;
+  position: relative;
+  padding-right: 35px;
+}
+
+.services__icon {
+   position: absolute;
+   top: 0;
+   left: 28px;
+   z-index: 1;
+}
+
+.services__title {
+  font-size: 14px;
+  color: #333;
+  text-transform: uppercase;
+  margin-bottom: 10px; 
+}
+
+.services__text {
+  font-family: 'Roboto', sans-serif;;
+  font-size: 15px;
+  color: #999;
+}
 
 
+/*Devices*/
 
+.devices {
+  position: relative;
+   width: 100%;
+   max-width: 600px;
+   margin: 0 auto;
+}
 
+.devices__item {
+   display: block;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.devices__item--iphone {
+  position: absolute;
+  bottom: -100px;
+  right: 0;
+  z-index: 1;
+}
 
 
