--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,9 +222,14 @@ hr {
 }
 
 .section--devices {
+  margin-bottom: 40px;
   background: url("../images/devices_bg.jpg") center no-repeat;
   background-size: cover;
   padding-bottom: 0;
+}
+
+.section--gray {
+  background-color: #f8f8f8;
 }
 
 .section__header {
@@ -411,5 +416,177 @@ hr {
   right: 0;
   z-index: 1;
 }
+
+
+/*We do*/
+.wedo {
+  display: flex;
+}
+
+.wedo__item {
+  width: 50%;
+}
+
+/*Accordion*/
+
+.accordion {
+
+}
+
+.accordion__item{
+  border: 1px solid #e5e5e5;
+  margin-bottom: 10px;
+}
+
+
+.accordion__item.active .accordion__content {
+  display: block;
+}
+
+.accordion__item.active .accordion__header {
+  border-bottom-color:  #e5e5e5;
+}
+
+.accordion__item.active .accordion__header:after{
+  transform: translateY(-50%) rotate(-45deg);
+  margin-top: 5px;
+}
+
+.accordion__header {
+  border-bottom: 1px solid #e5e5e5;
+  padding: 15px 20px 15px 65px;
+  position: relative;
+  border-bottom: 1px solid transparent;
+  cursor: pointer;
+}
+
+.accordion__header:after {
+
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+
+  border-top: 2px solid #ccc;
+  border-right: 2px solid #ccc;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  z-index: 1;
+  transform: translateY(-50%) rotate(135deg);
+}
+
+.accordion__icon {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  z-index: 1;
+
+  transform: translateY(-50%);
+}
+
+.accordion__title {
+  font-size: 14px;
+  color: 333;
+  text-transform: uppercase;
+}
+
+.accordion__content {
+  padding: 15px 20px;
+  font-size: 15px;
+  color: #999;
+  font-style: italic;
+  font-weight: 300;
+  font-family: 'Roboto' serif;
+  display: none;
+}
+
+/*Reviews*/
+.reviews {
+  padding: 0 110px;
+  position: relative;
+}
+
+.reviews__item {
+  padding-left: 205px;
+  position: relative;
+}
+
+.reviews__photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.reviews__text {
+  font-family: 'Roboto' serif;
+  font-size: 24px;
+  font-style: italic;
+  color: #999;
+  font-weight: 300;
+  margin-bottom: 15px ;
+}
+
+.reviews__author{
+  font-family: 'Kaushan Script', cursive;
+  font-size: 24px;
+  color: #333;
+}
+
+.reviews__author:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 3px;
+  width: 50px;
+  margin-right: 10px;
+  background-color: #f38181;
+}
+
+.reviews__btn {
+  font-size: 0;
+  color: transparent;
+  position: absolute;
+  top: 50%;
+  z-index: 1; 
+  transform: translateY(-50%);
+}
+
+.reviews__btn:after {
+
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+
+  border-top: 2px solid #ccc;
+  border-left: 2px solid #ccc;
+} 
+
+.reviews__btn--prev {
+  left: 0;
+  transform: rotate(-45deg);
+}
+
+.reviews__btn--next {
+  right: 0;
+  transform: rotate(135deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
