--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,42 +272,42 @@ hr {
 
 /*About*/
 
-.about {
+.card {
   margin-top: 80px;
   display: flex;
   justify-content: space-between;
 }
 
-.about__item { 
+.card__item { 
   width: 380px;
   background-color: #95e1d3;
   position: relative;
 }
 
-.about__item:hover .about__img img {
+.card__item:hover .card__img img {
   opacity: .1;
 }
 
-.about__item:hover .about__img {
+.card__item:hover .card__img {
   transform: translate3d(-10px, -10px, 0px);
 
 }
 
-.about__item:hover .about__text {
+.card__item:hover .card__text {
   opacity: 1;
 }
 
-.about__img {
+.card__img {
   background: linear-gradient(to bottom, #f38181 ,#fce38a);
   transition: transform .1s linear;
 }
 
-.about__img img {
+.card__img img {
   display: block;
   transition: opasity .1s linear;
 }
 
-.about__text {
+.card__text {
   width: 100%;
   font-size: 18px;
   color: #fff;
@@ -573,6 +573,40 @@ hr {
   right: 0;
   transform: rotate(135deg);
 }
+
+/*Social*/
+
+.social {
+  display: flex;
+  justify-content: center;
+}
+
+.social__item {
+  width: 55px;
+  height: 55px;
+  padding: 12px 10px;
+  background-color: #fce38a;
+  border-right: 1px solid #f38181;
+  text-decoration: none;
+  color: #f38181;
+  font-size: 30px;
+  line-height: 1;
+
+  transition: background .1s linear, color .1s linear;
+}
+
+.social__item:last-child{
+  border-right: 0;
+}
+
+.social__item:hover {
+  color: #fff;
+  background-color: #f38181;
+}
+
+
+
+
 
 
 
